syntax = "proto3";

package api;

// for grpc-gateway
import "google/api/annotations.proto";

// ChannelList is the service managing channel-lists.
service ChannelList {
	// Create creates the given channel-list.
	rpc Create(CreateChannelListRequest) returns (CreateChannelListResponse) {
		option(google.api.http) = {
			post: "/api/v1/channellist/create"
			body: "*"
		};
	}

	// Update updates the given channel-list.
	rpc Update(UpdateChannelListRequest) returns (UpdateChannelListResponse) {
		option(google.api.http) = {
			post: "/api/v1/channellist/update"
			body: "*"
		};
	}

	// Get returns the channel-list matching the given id.
	rpc Get(GetChannelListRequest) returns (GetChannelListResponse) {
		option(google.api.http) = {
			post: "/api/v1/channellist/get"
			body: "*"
		};
	}

	// List lists the channel-lists.
	rpc List(ListChannelListRequest) returns (ListChannelListResponse) {
		option(google.api.http) = {
			post: "/api/v1/channellist/list"
			body: "*"
		};
	}

	// Delete deletes the channel-list matching the given id.
	rpc Delete(DeleteChannelListRequest) returns (DeleteChannelListResponse) {
		option(google.api.http) = {
			post: "/api/v1/channellist/delete"
			body: "*"
		};
	}
}


// Channel is the service managing channels.
service Channel {
	// Create creates the given channel.
	rpc Create(CreateChannelRequest) returns (CreateChannelResponse) {
		option(google.api.http) = {
			post: "/api/v1/channel/create"
			body: "*"
		};
	}

	// Get returns the channel matching the given id.
	rpc Get(GetChannelRequest) returns (GetChannelResponse) {
		option(google.api.http) = {
			post: "/api/v1/channel/get"
			body: "*"
		};
	}

	// Update updates the given channel.
	rpc Update(UpdateChannelRequest) returns (UpdateChannelResponse) {
		option(google.api.http) = {
			post: "/api/v1/channel/update"
			body: "*"
		};
	}

	// Delete deletes the channel matching the given id.
	rpc Delete(DeleteChannelRequest) returns (DeleteChannelResponse) {
		option(google.api.http) = {
			post: "/api/v1/channel/delete"
			body: "*"
		};
	}

	// ListByChannelList lists the channels matching the given channel-list id.
	rpc ListByChannelList(ListChannelsByChannelListRequest) returns (ListChannelsByChannelListResponse) {
		option(google.api.http) = {
			post: "/api/v1/channel/listByChannelList"
			body: "*"
		};
	}
}

message CreateChannelListRequest {
	string name = 1;
}

message CreateChannelListResponse {
	int64 id = 1;
}

message UpdateChannelListRequest {
	int64 id = 1;
	string name = 2;
}

message UpdateChannelListResponse {}

message GetChannelListRequest {
	int64 id = 1;
}

message GetChannelListResponse {
	int64 id = 1;
	string name = 2;
}

message ListChannelListRequest {
	int64 limit = 1;
	int64 offset = 2;
}

message ListChannelListResponse {
	int64 totalCount = 1;
	repeated GetChannelListResponse result = 2;
}

message DeleteChannelListRequest {
	int64 id = 1;
}

message DeleteChannelListResponse {}

message CreateChannelRequest {
	int64 channelListID = 1;
	int64 channel = 2;
	int64 frequency = 3;
}

message CreateChannelResponse {
	int64 id = 1;
}

message GetChannelRequest {
	int64 id = 1;
}

message GetChannelResponse {
	int64 id = 1;
	int64 channelListID = 2;
	int64 channel = 3;
	int64 frequency = 4;
}

message UpdateChannelRequest {
	int64 id = 1;
	int64 channelListID = 2;
	int64 channel = 3;
	int64 frequency = 4;
}

message UpdateChannelResponse {}

message DeleteChannelRequest {
	int64 id = 1;
}

message DeleteChannelResponse {}

message ListChannelsByChannelListRequest {
	int64 id = 1;
} 

message ListChannelsByChannelListResponse {
	repeated GetChannelResponse result = 2;
}
